# gutenbuild

./: .gitignore  Cargo.toml  README.html  README.md  go.mod  go.sum  gutenbuild  main.go  pipeline.toml  test.html
plugins/: Cargo.toml
plugins/copy_assets/: Cargo.toml
plugins/copy_assets/src/: main.rs
plugins/fill_templates/: Cargo.toml
plugins/fill_templates/src/: main.rs
plugins/to_html/: Cargo.toml
plugins/to_html/src/: main.rs
plugins/utils/: Cargo.toml
plugins/utils/src/: fs.rs  lib.rs  parsing.rs
posts/: test.md
public/: test.html
public/directory/: hello.html
runtime/: pipeline.go  wasmtime.go
site/: site.toml
site/posts/: home.md  test.md
site/posts/posts/: index.md  test.md
site/public/: test.html
site/public/posts/: test.html
site/templates/: base.html  homepage.html
site/templates/blog/: all-posts.html  post.html
src/: logging.rs  main.rs  runtime.rs
