[package]
name = "gutenbuild"
version = "0.1.0"
authors = ["Mitchell Hynes <me@mitchellhynes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
wasmtime-wasi = "0.28.0"
wasmtime = "0.28.0"
anyhow = "1.0.41"
