[package]
name = "gutenbuild"
version = "0.1.0"
authors = ["Mitchell Hynes <me@mitchellhynes.com>"]
edition = "2018"

[dependencies]
serde = { version="1.0", features=["derive"] }
toml = { version="0.5.8", features=["preserve_order"] }
pulldown-cmark = "0.8.0"
wasmtime-wasi = "0.28.0"
wasi-common = "0.28.0"
wasmtime = "0.28.0"
anyhow = "1.0.41"
log = "0.4.14"
env_logger = "0.8.4"
